--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 version = "1.0"
-group = "dev.asbyth"
-archivesBaseName = "ForgeTemplate"
+group = "me.sploky"
+archivesBaseName = "Splokys Skyblock Mod"
 
 sourceCompatibility = targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
